--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "play-figma-plugin",
+  "name": "figma-plugin-perfect-freehand",
   "version": "1.0.0",
-  "description": "Figma plugin for Play.",
+  "description": "Create freehand strokes in Figma.",
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack --watch",
@@ -29,14 +29,16 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/aarongarciah/figma-plugin-typescript-boilerplate"
+    "url": "https://github.com/steveruizok/figma-plugin-perfect-freehand"
   },
-  "homepage": "https://createwithplay.com/",
+  "homepage": "https://github.com/steveruizok/figma-plugin-perfect-freehand",
   "devDependencies": {
     "@types/figma": "^1.0.3",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.46",
+    "@types/lz-string": "^1.3.34",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "css-loader": "^3.4.2",
@@ -95,12 +97,9 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^0.0.6",
-    "@radix-ui/react-slider": "^0.0.6",
     "@state-designer/react": "^1.5.6",
     "@stitches/react": "^0.0.2",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-select": "^3.0.19",
-    "firebase": "^7.19.1",
+    "lz-string": "^1.4.4",
     "perfect-freehand": "^0.3.3",
     "polygon-clipping": "^0.15.2",
     "react": "^16.13.1",
