--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "devDependencies": {
     "@types/figma": "^1.0.3",
     "@types/jest": "^25.2.1",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.46",
-    "@types/lz-string": "^1.3.34",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
@@ -72,11 +72,13 @@
     "figma",
     "plugin",
     "figma plugin",
-    "boilerplate",
-    "typescript",
-    "eslint",
-    "stylelint",
-    "prettier"
+    "perfect",
+    "freehand",
+    "drawing",
+    "ink",
+    "sketching",
+    "lettering",
+    "handwriting"
   ],
   "husky": {
     "hooks": {
